Fixed css layout problem from hover alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,6 @@
 /* -----------------------------------
 Basic rules
 ----------------------------------- */
-/*
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form,
-label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer,
-header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video
-{
-    font-size: 100%;
-}
-*/
-
 
 body
 {
@@ -35,13 +25,7 @@ body
 #masthead{max-width: 100%;}
 
 
-
-
 /*------  Navigation  -------*/
-
-
-
-
 
 nav ul
 {
@@ -703,7 +687,7 @@ body{font-size: 100%}
 
     ul.dropdown
     {
-        background:none;
+        max-width:14em;
     }
 
 
